✨ 🚑 (fix & feat) fixed bugs & delete account functionality

--- a/front/src/app/components/pages/auth/register/register.component.html
+++ b/front/src/app/components/pages/auth/register/register.component.html
@@ -22,8 +22,8 @@
             [clearInput]="true"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input label="Email" type="email" labelPlacement="floating" formControlName="email" [clearInput]="true"
-            [errorText]="registerForm.value['email'] && 'Email non conforme'"></ion-input>
+          <ion-input label="Pseudo" type="text" labelPlacement="floating" formControlName="pseudo" [clearInput]="true"
+            [errorText]="registerForm.value['pseudo'] && 'Pseudo non conforme'"></ion-input>
         </ion-item>
         <ion-item>
           <ion-input label="Age" type="number" labelPlacement="floating" formControlName="age" [clearInput]="true"
