--- a/front/src/app/components/pages/auth/register/register.component.html
+++ b/front/src/app/components/pages/auth/register/register.component.html
@@ -51,6 +51,9 @@
         </ion-item> -->
 
       </ion-list>
+      <p class="font-extralight italic w-full text-center">En m'inscrivant, j'accepte les <a
+          href="https://eula.hippochat.bgonzva.com" target="_blank" class="underline">EULA de
+          Hippochat</a></p>
 
       <!-- ? buttons -->
       <div class="flex justify-center w-full pt-10">
