--- a/front/src/app/components/pages/auth/no-mate/no-mate.component.html
+++ b/front/src/app/components/pages/auth/no-mate/no-mate.component.html
@@ -35,8 +35,9 @@
     <ion-item [disabled]="singleMate.id === authService.currentUserSubject.getValue().id" button
       *ngFor="let singleMate of matesService.singleMates" (click)="onSelectItem(singleMate)">
       <ion-avatar slot="start">
-        <img
+        <img *ngIf="singleMate.publicProfile"
           [src]="singleMate.publicProfile.sex === 0 ? '../../../../assets/couple-icons/boy-iso-color.webp' : '../../../../../assets/couple-icons/girl-iso-color.webp'" />
+        <img *ngIf="!singleMate.publicProfile" [src]="'../../../../../assets/couple-icons/girl-iso-color.webp'" />
       </ion-avatar>
       <ion-label>{{singleMate.firstname}} {{singleMate.lastname}}</ion-label>
     </ion-item>
@@ -49,8 +50,10 @@
   <ion-list class="transition-all ease-in-out" *ngIf="authService.currentUserSubject.getValue().receivedInvitations">
     <ion-item *ngFor="let invitation of authService.currentUserSubject.getValue().receivedInvitations">
       <ion-avatar>
-        <img
+        <img *ngIf="invitation.asker.publicProfile"
           [src]="invitation.asker.publicProfile.sex === 0 ? '../../../../../assets/couple-icons/boy-iso-color.webp' :  '../../../../../assets/couple-icons/girl-iso-color.webp'" />
+        <img *ngIf="!invitation.asker.publicProfile" [src]="'../../../../../assets/couple-icons/girl-iso-color.webp'" />
+
       </ion-avatar>
       <ion-label class="line-clamp-999">{{invitation.asker.firstname}} {{invitation.asker.lastname}}</ion-label>
       <ion-buttons>
