🐛 (fix) fixed no nickname moodboard today segment

--- a/front/src/app/components/pages/moodboard/moodboard.page.html
+++ b/front/src/app/components/pages/moodboard/moodboard.page.html
@@ -26,17 +26,18 @@
 
   <app-moodboard-today [who]="who" *ngIf="timePeriod === 'today'"></app-moodboard-today>
   <app-moodboard-month *ngIf="timePeriod === 'month'"></app-moodboard-month>
-  
+
 </ion-content>
 
 <!-- ? bottom segment for me  -->
 <ion-segment *ngIf="timePeriod === 'today'" [(ngModel)]="who"
   (ngModelChange)="onChangeMate(); who === 'me' ? daysEmojisService.getMyTodaysEmoji() : daysEmojisService.getMyMatesTodaysEmoji()">
   <ion-segment-button value="me">
-    <ion-label>{{publicProfileService.myPublicProfile?.nickname}}</ion-label>
+    <ion-label>{{publicProfileService.myPublicProfile?.nickname ??
+      (authService.currentUserSubject.getValue().firstname)}}</ion-label>
   </ion-segment-button>
 
   <ion-segment-button value="mate">
-    <ion-label>{{publicProfileService.myMatePublicProfile?.nickname}}</ion-label>
+    <ion-label>{{publicProfileService.myMatePublicProfile?.nickname ?? (couplesService.myMate?.firstname)}}</ion-label>
   </ion-segment-button>
 </ion-segment>
